# EoStudio

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml  release-video.yml  release.yml  video-build.yml  weekly.yml
docs/: editors-guide.md  release-video-guide.md
docs/book/: book.md  references.bib
docs/site/: index.html
enterprise/docker/: Dockerfile
eostudio/: __init__.py
eostudio/cli/: main.py
eostudio/codegen/: __init__.py  react_motion.py
eostudio/codegen/ui_kit/: __init__.py  component_library.py
eostudio/core/: __init__.py
eostudio/core/ai/: __init__.py  agent.py  agent_loop.py  chat_panel.py  code_assistant.py  code_quality.py  code_review.py  doc_generator.py  (+8 more)
eostudio/gui/: app.py
eostudio/platform/: electron_backend.py  eos_backend.py  pwa_backend.py  web_backend.py
eostudio/plugins/: plugin_base.py
promo/: _check_tts.py  _fix_deps.py  _fix_imports.py  _install_pysbd.py  _install_pysbd2.py  _test_tts2.py  _write_video_files.py  ai_prototyping_video.py  animation_deep_dive.py  eostudio-v1-promo.html  eostudio_promo.py  generate_american_narration.py  generate_audio.py  generate_final_narration.py  generate_founder_narration.py  generate_narrated_video.py  generate_voice_clone.py  promo_scene.py  voice_clone_final.py  voice_clone_v2.py  voice_clone_xtts.py  voice_clone_xtts_v2.py  vs_competition_video.py
promo/narrated/: concat_list.txt
promo/narrated_cloned/: list.txt
promo/narrated_v2/: concat_list.txt
promo/narrated_v3/: concat_list.txt
promo/narrated_xtts/: list.txt
promo/narrated_xtts2/: final_list.txt  raw_list.txt
tests/integration/: test_e2e_workflow.py  test_release_video.py
tests/unit/: test_animation.py  test_design_system.py  test_prototyping.py  test_react_motion.py  test_video.py
(+83 files in other folders)
