[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EoStudio"
version = "2.0.0"
description = "EoStudio - Universal Development Platform with AI-Powered Code Editing, Design Suite, DevTools, and Real-Time Collaboration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
ai = [
    "httpx>=0.25",
    "tiktoken>=0.5",
]
database = [
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
    "pymongo>=4.5",
    "redis>=5.0",
]
cloud = [
    "httpx>=0.25",
    "keyring>=24.0",
]
all = [
    "Pillow>=10.0",
    "httpx>=0.25",
    "tiktoken>=0.5",
    "keyring>=24.0",
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
    "pymongo>=4.5",
    "redis>=5.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
]

[project.scripts]
EoStudio = "eostudio.cli.main:cli"

[project.urls]
Homepage = "https://embeddedos-org.github.io"
Repository = "https://github.com/embeddedos-org/EoStudio"
Documentation = "https://github.com/embeddedos-org/EoStudio/tree/main/docs"

[tool.setuptools.packages.find]
include = ["eostudio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_strict_optional = true
warn_return_any = false
warn_unused_configs = true

[tool.flake8]
max-line-length = 120
ignore = ["E501", "W503", "E402", "E741", "F401", "F811", "F841", "F541", "F404"]

disable_error_code = ["no-redef", "attr-defined", "misc", "call-overload", "str-unpack", "var-annotated", "func-returns-value"]